--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
       with:
-        region: us-east-2 
+        AWS_REGION: us-east-2 
 
     - name: Build, tag, and push image to Amazon ECR
       env:
