--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-      with:
-        AWS_REGION: us-east-2 
+      env:
+        AWS_REGION: us-east-2
 
     - name: Build, tag, and push image to Amazon ECR
       env:
