--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to AWS Elastic Beanstalk
 on:
   push:
     branches:
-      - main  
+      - tktk  
 
 jobs:
   deploy:
@@ -42,8 +42,8 @@ jobs:
       with:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        application_name: airline_predictor  
-        environment_name: Airlinepredictor-env  
+        application_name: airlines  
+        environment_name: Airlines-env  
         version_label: ${{ github.run_id }}
         region: us-east-2  
         deployment_package: application.zip
